fix:solve overflow bug

--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 /*Cards Section*/
 
 div.cards-conteiner{
-  display: inline-flex;
-  margin-left: 50px;
+  display: flex;
+  margin-left: 40px;
+  height: 120px;
+}
+div .argument{
+  display: block;
 }
 a{
   text-decoration: none;
   color: initial;
 }
 div.card{
-background-color: rgb(66, 66, 66);
-margin: auto;
-border-radius: 5px;
-max-width: max-content;
+  background-color: rgb(66, 66, 66);
+  border-radius: 5px;
+  max-width: max-content; 
 
 }
 div.card-header{
@@ -76,20 +79,13 @@ video{
 div.like-buttons{
     display: inline;
 }
-div.like-buttons:hover > .hide{
-    display: inline;
-}
-div.like-buttons:hover {
-    transform: scale(1.5);
-    transition: 500ms;
-}
+
 /*card hover display*/
 div.card:hover{
-  transform: scale(1.1);
+  transform: scale(1.2);
   transition: 500ms;
   min-width: max-content;
-  position:absolute;
-  margin-left: -40px;
+  transform-origin: center;
 }
 div.card:hover video.hide{
   display:flex;
@@ -105,3 +101,10 @@ div.card:hover div.card-content-info, div.card-content-features{
   font-size: 0.6em;
   transition: 0ms;
 } 
+div.like-buttons:hover > .hide{
+  display: inline;
+}
+div.like-buttons:hover {
+  transform: scale(1.5);
+  transition: 500ms;
+}
